src/assets/styles/_index.scss
@use "./custom" as *;

html,
body {
  height: 100%;
  margin: 0;
  background-color: lightblue;
  display: flex;
  justify-content: center;
  align-items: center;
}

.app-container {
  position: relative;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  width: 100vw;
  height: 100vh;
  overflow: auto;
  overflow-x: hidden;

  @include media-breakpoint-up(md) {
    height: 85vh;
    width: 85vw;
  }

  .header-container {
    height: 8vh;
    width: 100vw;
    background-color: bisque;
    margin-top: 0;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;

    img {
      height: 35px;
      width: 35px;
      margin-right: 2rem;
    }

    h1 {
      margin-top: 0.5rem;
    }

    @include media-breakpoint-down(md) {
      justify-content: space-between;
    }
  }

  .content-container {
    height: calc(100% - 12vh);
    display: flex;
    flex-direction: column;

    .sidebar {
      background-color: aqua;
      height: 8%;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;

      a {
        padding: 5px;
        margin: 5px;
      }
    }

    .main-content {
      background-color: whitesmoke;
      height: 92%;
    }

    @include media-breakpoint-up(md) {
      .sidebar {
        height: 100%;
        width: 14%;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start;

        a:first-child {
          margin-top: 2rem;
        }
      }

      .main-content {
        height: 100%;
        width: 86%;
      }
    }
  }

  .footer-container {
    height: 4vh;
    background-color: bisque;
    margin-bottom: 0;
    bottom: 0;
    position: absolute;
    width: 100%;
    text-align: center;

    p {
      margin-top: 0.5rem;
    }
  }
}

